--- a/index.html
+++ b/index.html
@@ -210,6 +210,43 @@
 			        <p>在这危难关头！馒头和叉叉挺身而出！直奔不断爆发的太阳！让我们一起拯救这个世界吧！叉叉！</p>
 			    </div>
 			</article>
+			<article class="card">
+			    <img src="img/xx10.jpg"
+				class="card-img"
+				width="1920"
+				height="1080"
+				alt="" />
+			    <div class="card-content">
+			        <div class="card-date">2025年3月24日</div>
+			        <h2 class="card-title">妖娆叉叉猪</h2>
+			        <p>这年头怎么连猪猪都这么诱人了，得赶紧把小叉推过去学学</p>
+			    </div>
+			</article>
+			<article class="card">
+			    <img src="img/xx11.jpg"
+				class="card-img"
+				width="1920"
+				height="1080"
+				alt="" />
+			    <div class="card-content">
+			        <div class="card-date">2025年3月24日</div>
+			        <h2 class="card-title">juicy火腿肠</h2>
+			        <p>悲~ 两只猪猪刚刚还活得好好的，怎么一转眼就变成火腿肠了。眼泪不争气的从嘴角流了下来^0^</p>
+			    </div>
+			</article>
+			<article class="card">
+			    <img src="img/xx12.jpg"
+				class="card-img"
+				width="1920"
+				height="1080"
+				alt="" />
+			    <div class="card-content">
+			        <div class="card-date">2025年3月24日</div>
+			        <h2 class="card-title">甜甜泳圈</h2>
+			        <p>话说小叉的甜甜圈这么大个缺口，等会不会掉下去吧</p>
+			    </div>
+			</article>
+			
         </div>
     </div>
 
